bh-eks-manifest/bh-webapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bh-pod1
  name: bh-pod1
spec:
  containers:
  - image: varmadbk/bh-customer:appv2
    name: bh-pod1
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
