bh-eks-manifest/bh_final_int_lb.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bh-app-deploy
  name: bh-int-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bh-app-deploy
  type: ClusterIP
status:
  loadBalancer: {}
