bh-eks-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bh-web-deploy
  name: bhulb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bh-web-deploy
  type: LoadBalancer
status:
  loadBalancer: {}
