bh-eks-manifest/service_final.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bh-app-deploy
  name: bhlub2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bh-app-deploy
  type: LoadBalancer
status:
  loadBalancer: {}
